tests/spec/emit/snapshots/for_loop_range_with_expressions.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(start: int, end: int) -> int {
    let mut sum = 0;
    for i in start..end {
      sum = sum + i;
    };
    sum
  }
---
package main

func test(start, end int) int {
	sum := 0
	for i := start; i < end; i++ {
		sum += i
	}
	return sum
}
