tests/spec/emit/snapshots/for_loop_range_with_unread_binding_drops_the_clause.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn do_work() {}
  
  fn test() {
    for i in 0..3 {
      do_work();
    }
  }
---
package main

func doWork() {}

func test() {
	for range 3 {
		doWork()
	}
}
