tests/spec/emit/snapshots/for_loop_stored_range_exclusive.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let r = 0..5;
    let mut sum = 0;
    for i in r {
      sum = sum + i;
    };
    sum
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	r := lisette.Range[int]{
		Start: 0,
		End:   5,
	}
	sum := 0
	for i := r.Start; i < r.End; i++ {
		sum += i
	}
	return sum
}
