tests/spec/emit/snapshots/for_loop_stored_range_from.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let r = 0..;
    let mut sum = 0;
    for i in r {
      if i >= 5 {
        break;
      }
      sum = sum + i;
    };
    sum
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	r := lisette.RangeFrom[int]{Start: 0}
	sum := 0
	for i := r.Start; ; i++ {
		if i >= 5 {
			break
		}
		sum += i
	}
	return sum
}
