tests/spec/emit/snapshots/for_loop_stored_range_mutation_captured.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn main() {
    let mut r = 0..3
    let mut n = 0
    for i in r {
      n += 1
      r = 0..0
      let _ = i
    }
    let _ = n
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	r := lisette.Range[int]{
		Start: 0,
		End:   3,
	}
	n := 0
	range_1 := r
	for i := range_1.Start; i < range_1.End; i++ {
		n++
		r = lisette.Range[int]{
			Start: 0,
			End:   0,
		}
		_ = i
	}
	_ = n
}
