tests/spec/emit/snapshots/for_loop_tuple_pattern_slice.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn test(pairs: Slice<(int, string)>) {
    for (a, b) in pairs {
      fmt.Println(a, b)
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func test(pairs []lisette.Tuple2[int, string]) {
	for _, item := range pairs {
		a := item.First
		b := item.Second
		fmt.Println(a, b)
	}
}
